syntax = "proto3";

package juno.project;

import "identifiers.proto";
import "common.proto";

service ProjectService {
  rpc getProject(identifiers.ProjectIdentifier) returns (common.Project);
  rpc getAllProjects(GetAllProjectsRequest) returns (common.Projects);
  rpc getUsersFromProject(GetUsersFromProject) returns (common.Users);
  rpc createProject(CreateProjectRequest) returns (common.Project);
  rpc updateProject(UpdateProjectRequest) returns (common.Project);
  rpc deleteProject(identifiers.ProjectIdentifier) returns (common.Project);
  rpc linkUser(LinkUserToProjectRequest) returns (common.Project);
}

message GetUsersFromProject {
  int64 projectId = 1;
}

message GetAllProjectsRequest {
  repeated int64 projectIds = 1;
}
message CreateProjectRequest { string name = 1; }

message ProjectUpdateParams { optional string name = 2; }

message LinkUserToProjectRequest {
  identifiers.ProjectIdentifier project = 1;
  identifiers.UserIdentifier user = 2;
}

message UpdateProjectRequest {
  identifiers.ProjectIdentifier projectIdentifier = 1;
  ProjectUpdateParams updateParams = 2;
}
